--- a/blog/templates/userArticles.html
+++ b/blog/templates/userArticles.html
@@ -39,12 +39,17 @@
       <td><div class="d-grid gap-2"><a class="btn btn-outline-primary" href="/articles/details/{{article.id}}"><i class="far fa-eye"></i> Detaylar</a></div></td>
       <td><div class="d-grid gap-2"><a class="btn btn-outline-warning" href="/articles/update/{{article.id}}"><i class="fas fa-pencil-alt"></i> Düzenle</a></div></td>
       <td><div class="d-grid gap-2"><a class="btn btn-outline-danger" href="/articles/delete/{{article.id}}"><i class="fas fa-trash"></i> Sil</a></div></td>
+
+
     </tr>
   {%endfor%}
   <!-- MAKALE BİTİŞİ -->
   </tbody>
 </table>
 </div>
+ <!-- MODAL -->
+
+ <!-- MODAL BİTİŞ-->
 {% else %}<br>
 <div class="card text-center">
 <div class="alert alert-danger" role="alert">
