--- a/blog/templates/detailArticle.html
+++ b/blog/templates/detailArticle.html
@@ -93,23 +93,27 @@
    <img src="/media/{{article.articleImage}}" alt="" width="700px">
 </center>
 </div>
+<form action="{% url 'article:addComment' article.id %}" method="post">
+   {% csrf_token %}
 <div class="container w-50 p-3">
    <div class="row align-items-start">
       <div class="col">
          <div class="panel-body">
-            <textarea class="form-control" placeholder="Yorum Yap" rows="3"></textarea>
+            <textarea name="commentContent" id="id_commentContent" class="form-control" placeholder="Yorum Yap" rows="3"></textarea>
             <br>
-            <button type="button" class="btn btn-info pull-right" style="float:right;color:white;">Yorum Yap</button>
+            <button type="submit" class="btn btn-info pull-right" style="float:right;color:white;">Yorum Yap</button>
             <div class="clearfix"></div>
          </div>
       </div>
    </div>
+   </form>
+<!-- YORUM BASLANGICI -->
    <div class="media g-mb-30 media-comment">
             <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Image Description">
             <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
               <div class="g-mb-15">
-                <h5 class="h5 g-color-gray-dark-v1 mb-0">John Doe</h5>
-                <span class="g-color-gray-dark-v4 g-font-size-12">5 days ago</span>
+                <h5 class="h5 g-color-gray-dark-v1 mb-0">YAZAR İSMİ</h5>
+                <span class="g-color-gray-dark-v4 g-font-size-12">TARİH</span>
               </div>
 
               <p>YORUM IÇERİĞİ</p>
@@ -131,6 +135,7 @@
             </div>
         </div>
     </div>
+<!-- YORUM BITISI -->
 
 
 
